--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="text">
         <h1>Aleš Holman</h1>
         <h3>Fullstack software developer</h3>
-        <p>I am begginer in software engineering but I love what I learned soo far. I want to continue my journey on becoming a fulltime frontend software developer. My favorite programming language is Java.</p>
-        <p>My plan is to start 13 weeks long course at Greenfox Academy and then get a job as a software developer. Thats my dream</p>
+        <p>I am begginer in software engineering but I love what I have learned soo far. I want to continue my journey on becoming a fulltime frontend software developer. My favorite programming language is Java.</p>
+        <p>My plan is to start 20 weeks long course at Greenfox Academy and then get a job as a software developer. Thats my dream</p>
         <p>This is a new added paragraph.</p>
     </div>
     <div>
